--- a/SpreadsheetLight.csproj
+++ b/SpreadsheetLight.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>10</LangVersion>
     <RootNamespace>$(MSBuildProjectName.Replace("-", "_"))</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
 	  <Copyright>Copyright 2011 Vincent Tan Wai Lip</Copyright>
@@ -39,8 +40,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DocumentFormat.OpenXml" Version="2.18.0" />
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.20.0" />
+    <PackageReference Include="IndexRange" Version="1.0.2" />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
