--- a/SpreadsheetLight.csproj
+++ b/SpreadsheetLight.csproj
@@ -8,7 +8,7 @@
     <Copyright>Copyright 2011 Vincent Tan Wai Lip</Copyright>
     <Company>NF Software Inc.</Company>
 	<Version>3.5.2</Version>
-    <Authors>Vincent Tan, Nathanael Frey</Authors>
+    <Authors>Vincent Tan, NF Software Inc.</Authors>
     <Description>
 		  SpreadsheetLight is an open source Open XML spreadsheet .NET library written in C#, and is released under the MIT License. You can create new Open XML spreadsheets, or work with existing Open XML spreadsheets that are compatible with Microsoft Excel 2007/2010/2013 and LibreOffice Calc.
 
@@ -52,8 +52,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DocumentFormat.OpenXml" Version="2.18.*" />
-    <PackageReference Include="System.Drawing.Common" Version="6.0.*" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="[2.18.0,]" />
+    <PackageReference Include="System.Drawing.Common" Version="[6.0.0,7)" />
   </ItemGroup>
 
   <ItemGroup>
