--- a/SpreadsheetLight.csproj
+++ b/SpreadsheetLight.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
     <RootNamespace>$(MSBuildProjectName.Replace("-", "_"))</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Copyright>Copyright 2011 Vincent Tan Wai Lip</Copyright>
     <Company>NF Software Inc.</Company>
-	<Version>3.5.2</Version>
+	<Version>3.5.3</Version>
     <Authors>Vincent Tan, NF Software Inc.</Authors>
     <Description>
 		  SpreadsheetLight is an open source Open XML spreadsheet .NET library written in C#, and is released under the MIT License. You can create new Open XML spreadsheets, or work with existing Open XML spreadsheets that are compatible with Microsoft Excel 2007/2010/2013 and LibreOffice Calc.
@@ -23,6 +23,9 @@
     <RepositoryUrl>https://github.com/thirstyape/spreadsheetlight-cross-platform</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes>
+		3.5.3
+		Update to enable multi-targeting for .NET 6.0, .NET 7.0, and .NET 8.0
+		
 		3.5.2
 		Add project icon, include XML documentation
 
@@ -53,7 +56,7 @@
 
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="[2.18.0,]" />
-    <PackageReference Include="System.Drawing.Common" Version="[6.0.0,7)" />
+    <PackageReference Include="System.Drawing.Common" Version="[6.0.0,9)" />
   </ItemGroup>
 
   <ItemGroup>
@@ -61,7 +64,7 @@
 		  <Pack>True</Pack>
 		  <PackagePath></PackagePath>
 	  </None>
-    <None Update="license.txt">
+    <None Include="license.txt">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
