--- a/SpreadsheetLight.csproj
+++ b/SpreadsheetLight.csproj
@@ -7,7 +7,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Copyright>Copyright 2011 Vincent Tan Wai Lip</Copyright>
     <Company>NF Software Inc.</Company>
-	<Version>3.5.3</Version>
+	<Version>3.5.4</Version>
+    <AssemblyVersion>3.5.4.0</AssemblyVersion>
+    <FileVersion>3.5.4.0</FileVersion>
     <Authors>Vincent Tan, NF Software Inc.</Authors>
     <Description>
 		  SpreadsheetLight is an open source Open XML spreadsheet .NET library written in C#, and is released under the MIT License. You can create new Open XML spreadsheets, or work with existing Open XML spreadsheets that are compatible with Microsoft Excel 2007/2010/2013 and LibreOffice Calc.
@@ -23,9 +25,12 @@
     <RepositoryUrl>https://github.com/thirstyape/spreadsheetlight-cross-platform</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes>
+		3.5.4
+		Prevent using with DocumentFormat.OpenXml >= 3.0.0 due to breaking changes
+
 		3.5.3
 		Update to enable multi-targeting for .NET 6.0, .NET 7.0, and .NET 8.0
-		
+
 		3.5.2
 		Add project icon, include XML documentation
 
@@ -35,8 +40,6 @@
 		3.5.0
 		Original release from https://spreadsheetlight.com/
 	</PackageReleaseNotes>
-    <AssemblyVersion>3.5.2.0</AssemblyVersion>
-    <FileVersion>3.5.2.0</FileVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
@@ -55,7 +58,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DocumentFormat.OpenXml" Version="[2.18.0,]" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="[2.18.0,3)" />
     <PackageReference Include="System.Drawing.Common" Version="[6.0.0,9)" />
   </ItemGroup>
 
