--- a/SpreadsheetLight.csproj
+++ b/SpreadsheetLight.csproj
@@ -8,9 +8,9 @@
 		<Copyright>Copyright 2011 Vincent Tan Wai Lip</Copyright>
 		<Company>NF Software Inc.</Company>
 		<Authors>Vincent Tan, NF Software Inc.</Authors>
-		<Version>3.5.7</Version>
-		<AssemblyVersion>3.5.7.0</AssemblyVersion>
-		<FileVersion>3.5.7.0</FileVersion>
+		<Version>3.5.8</Version>
+		<AssemblyVersion>3.5.8.0</AssemblyVersion>
+		<FileVersion>3.5.8.0</FileVersion>
 		<PackageId>SpreadsheetLight.Cross.Platform</PackageId>
 		<PackageTags>spreadsheetlight openxml excel export template xlsx</PackageTags>
 		<RepositoryUrl>https://github.com/thirstyape/spreadsheetlight-cross-platform</RepositoryUrl>
@@ -23,6 +23,9 @@
 			This is a fork of the original code designed to run on .NET 6.0+. It also includes OS platform checks so that code requiring Windows will not execute on other platforms. Some features may not work on non-Windows platforms.
 		</Description>
 		<PackageReleaseNotes>
+			3.5.8
+			Bugfix for NullReferenceException on SLDocument creation on Linux (PR #4)
+
 			3.5.7
 			Add DateOnly and TimeOnly support to SetCellValue and ImportDataTable
 
